---
source: crates/chain-config/src/config.rs
assertion_line: 162
expression: json
---
{
  "chain_name": "local_testnet",
  "block_gas_limit": 1000000000,
  "initial_state": {
    "contracts": [
      {
        "contract_id": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "code": "0x24400000",
        "salt": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "tx_id": "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
        "output_index": "0xc9"
      }
    ]
  },
  "transaction_parameters": {
    "tx_params": {
      "max_inputs": 255,
      "max_outputs": 255,
      "max_witnesses": 255,
      "max_gas_per_tx": 100000000
    },
    "predicate_params": {
      "max_predicate_length": 1048576,
      "max_predicate_data_length": 1048576,
      "max_message_data_length": 1048576,
      "max_gas_per_predicate": 100000000
    },
    "script_params": {
      "max_script_length": 1048576,
      "max_script_data_length": 1048576
    },
    "contract_params": {
      "contract_max_size": 16777216,
      "max_storage_slots": 255
    },
    "fee_params": {
      "gas_price_factor": 1000000000,
      "gas_per_byte": 4
    },
    "chain_id": 0,
    "gas_costs": {
      "add": 1,
      "addi": 1,
      "aloc": 1,
      "and": 1,
      "andi": 1,
      "bal": 22,
      "bhei": 1,
      "bhsh": 1,
      "burn": 126,
      "cb": 1,
      "cfei": 1,
      "cfsi": 1,
      "croo": 20,
      "div": 1,
      "divi": 1,
      "eck1": 1592,
      "ecr1": 3000,
      "ed19": 3000,
      "eq": 1,
      "exp": 1,
      "expi": 1,
      "flag": 1,
      "gm": 1,
      "gt": 1,
      "gtf": 1,
      "ji": 1,
      "jmp": 1,
      "jne": 1,
      "jnei": 1,
      "jnzi": 1,
      "jmpf": 1,
      "jmpb": 1,
      "jnzf": 1,
      "jnzb": 1,
      "jnef": 1,
      "jneb": 1,
      "k256": 16,
      "lb": 1,
      "log": 43,
      "lt": 1,
      "lw": 1,
      "mcpi": 3,
      "mint": 127,
      "mlog": 1,
      "mod": 1,
      "modi": 1,
      "move": 1,
      "movi": 1,
      "mroo": 2,
      "mul": 1,
      "muli": 1,
      "mldv": 1,
      "noop": 1,
      "not": 1,
      "or": 1,
      "ori": 1,
      "ret_contract": 63,
      "rvrt_contract": 65,
      "s256": 4,
      "sb": 1,
      "scwq": 23,
      "sll": 1,
      "slli": 1,
      "srl": 1,
      "srli": 1,
      "srw": 21,
      "sub": 1,
      "subi": 1,
      "sw": 1,
      "sww": 67,
      "swwq": 68,
      "time": 1,
      "tr": 255,
      "tro": 196,
      "wdcm": 1,
      "wqcm": 1,
      "wdop": 1,
      "wqop": 1,
      "wdml": 1,
      "wqml": 2,
      "wddv": 2,
      "wqdv": 3,
      "wdmd": 4,
      "wqmd": 7,
      "wdam": 3,
      "wqam": 4,
      "wdmm": 4,
      "wqmm": 4,
      "xor": 1,
      "xori": 1,
      "call": {
        "base": 173,
        "dep_per_unit": 180
      },
      "ccp": {
        "base": 22,
        "dep_per_unit": 152
      },
      "csiz": {
        "base": 16,
        "dep_per_unit": 868
      },
      "ldc": {
        "base": 22,
        "dep_per_unit": 150
      },
      "logd": {
        "base": 48,
        "dep_per_unit": 18
      },
      "mcl": {
        "base": 1,
        "dep_per_unit": 2503
      },
      "mcli": {
        "base": 1,
        "dep_per_unit": 2559
      },
      "mcp": {
        "base": 1,
        "dep_per_unit": 1301
      },
      "meq": {
        "base": 1,
        "dep_per_unit": 1747
      },
      "retd_contract": {
        "base": 71,
        "dep_per_unit": 18
      },
      "smo": {
        "base": 207,
        "dep_per_unit": 18
      },
      "srwq": {
        "base": 44,
        "dep_per_unit": 5
      }
    }
  },
  "gas_costs": {
    "add": 1,
    "addi": 1,
    "aloc": 1,
    "and": 1,
    "andi": 1,
    "bal": 22,
    "bhei": 1,
    "bhsh": 1,
    "burn": 126,
    "cb": 1,
    "cfei": 1,
    "cfsi": 1,
    "croo": 20,
    "div": 1,
    "divi": 1,
    "eck1": 1592,
    "ecr1": 3000,
    "ed19": 3000,
    "eq": 1,
    "exp": 1,
    "expi": 1,
    "flag": 1,
    "gm": 1,
    "gt": 1,
    "gtf": 1,
    "ji": 1,
    "jmp": 1,
    "jne": 1,
    "jnei": 1,
    "jnzi": 1,
    "jmpf": 1,
    "jmpb": 1,
    "jnzf": 1,
    "jnzb": 1,
    "jnef": 1,
    "jneb": 1,
    "k256": 16,
    "lb": 1,
    "log": 43,
    "lt": 1,
    "lw": 1,
    "mcpi": 3,
    "mint": 127,
    "mlog": 1,
    "mod": 1,
    "modi": 1,
    "move": 1,
    "movi": 1,
    "mroo": 2,
    "mul": 1,
    "muli": 1,
    "mldv": 1,
    "noop": 1,
    "not": 1,
    "or": 1,
    "ori": 1,
    "ret_contract": 63,
    "rvrt_contract": 65,
    "s256": 4,
    "sb": 1,
    "scwq": 23,
    "sll": 1,
    "slli": 1,
    "srl": 1,
    "srli": 1,
    "srw": 21,
    "sub": 1,
    "subi": 1,
    "sw": 1,
    "sww": 67,
    "swwq": 68,
    "time": 1,
    "tr": 255,
    "tro": 196,
    "wdcm": 1,
    "wqcm": 1,
    "wdop": 1,
    "wqop": 1,
    "wdml": 1,
    "wqml": 2,
    "wddv": 2,
    "wqdv": 3,
    "wdmd": 4,
    "wqmd": 7,
    "wdam": 3,
    "wqam": 4,
    "wdmm": 4,
    "wqmm": 4,
    "xor": 1,
    "xori": 1,
    "call": {
      "base": 173,
      "dep_per_unit": 180
    },
    "ccp": {
      "base": 22,
      "dep_per_unit": 152
    },
    "csiz": {
      "base": 16,
      "dep_per_unit": 868
    },
    "ldc": {
      "base": 22,
      "dep_per_unit": 150
    },
    "logd": {
      "base": 48,
      "dep_per_unit": 18
    },
    "mcl": {
      "base": 1,
      "dep_per_unit": 2503
    },
    "mcli": {
      "base": 1,
      "dep_per_unit": 2559
    },
    "mcp": {
      "base": 1,
      "dep_per_unit": 1301
    },
    "meq": {
      "base": 1,
      "dep_per_unit": 1747
    },
    "retd_contract": {
      "base": 71,
      "dep_per_unit": 18
    },
    "smo": {
      "base": 207,
      "dep_per_unit": 18
    },
    "srwq": {
      "base": 44,
      "dep_per_unit": 5
    }
  },
  "consensus": {
    "PoA": {
      "signing_key": "22ec92c3105c942a6640bdc4e4907286ec4728e8cfc0d8ac59aad4d8e1ccaefb"
    }
  }
}
